--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "debug": "^4.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^6.0.2",
+    "should": "^13.2.3"
   }
 }
