--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "directories": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
     "debug": "^4.1.0"
   },
   "devDependencies": {
+    "ioredis": "^4.6.2",
     "mocha": "^6.0.2",
     "should": "^13.2.3"
   }
