--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "debug": "^4.1.0"
+    "@types/debug": "^4.1.5",
+    "@types/ioredis": "^4.0.17",
+    "@types/pino": "^5.8.10",
+    "debug": "^4.1.0",
+    "pino": "^5.13.2"
   },
   "devDependencies": {
+    "eslint": "^6.3.0",
     "ioredis": "^4.6.2",
     "mocha": "^6.0.2",
     "should": "^13.2.3"
