--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "directories": {},
   "scripts": {
-    "test": "mocha"
+    "test": "tsc && mocha",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
   },
   "devDependencies": {
     "eslint": "^6.3.0",
-    "ioredis": "^4.6.2",
+    "ioredis": "^4.14.0",
     "mocha": "^6.0.2",
     "should": "^13.2.3"
   }
