--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@types/debug": "^4.1.5",
     "@types/ioredis": "^4.0.17",
+    "@types/lodash": "^4.14.138",
     "@types/pino": "^5.8.10",
     "debug": "^4.1.0",
+    "lodash": "^4.17.15",
     "pino": "^5.13.2"
   },
   "devDependencies": {
