--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^6.3.0",
     "ioredis": "^4.14.0",
     "mocha": "^6.0.2",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "typescript": "^3.6.3"
   }
 }
