--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "^4.1.0"
   },
   "devDependencies": {
+    "eslint": "^6.5.1",
     "ioredis": "^4.6.2",
     "mocha": "^6.0.2",
     "should": "^13.2.3"
