--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/debug": "^4.1.5",
-    "@types/ioredis": "^4.0.17",
+    "@types/ioredis": "4.0.17",
     "@types/lodash": "^4.14.138",
     "@types/pino": "^5.8.10",
     "debug": "^4.1.0",
